[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 58.1.0',
    'numpy >= 1.24.2',
    'Cython >= 0.29.33',
    'scipy >= 1.7.3',
]

[project]
name = "CasCy"
authors = [
    {name = "Benjamin Spreng", email = "sprengjamin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    'numpy >= 1.24.2',
    'scipy >= 1.7.3',
]